--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
-        pip install -r requirements.txt; fi
+        pip install -r requirements.txt; 
     - name: Run migrations
       run: python manage.py migrate
     - name: Run tests
