--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,11 +35,11 @@ jobs:
         python-version: 3.8
     - name: psycopg2 prerequisites
       run: sudo apt-get install python-dev libpq-dev
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install flake8 pytest
-#         pip install -r requirements.txt; 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        pip install -r requirements.txt; 
     - name: Run migrations
       run: python manage.py migrate
     - name: Run tests
