--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,6 +42,6 @@ jobs:
         pip install -r requirements.txt; 
     - name: Run migrations
       run: python manage.py migrate
-    - name: Run tests
-      run: py.test
+    - name: Run app 
+      run: python manage.py runserver
     
